--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -57,7 +57,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: red;
+  color: black;
 }
 
 .Preview .ui.loader:before {
