fix: upgrade dcl/schemas

--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -33,8 +33,9 @@
   cursor: grabbing;
 }
 
-.Preview.has-error {
+.Preview.is-3d.has-error  {
   opacity: 1;
+  cursor: default;
 }
 
 .Preview .thumbnail {
